--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -11,7 +11,8 @@
 				#main-art
 				#player-bottom
 					#player-title
-					#player-artist	
+					#player-artist
+					#player-button play
 		- if current_user == nil
 			#create-link
 				= link_to 'Create your own MySong.is profile', '/users/sign_in'
