remove artist styling and play fix

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -9,7 +9,7 @@
         = f.text_field :username,
         :value => "#{@username}",
         :class => "new-user",
-        :style => "color:#aaa;",
+        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
         :onfocus => "if(this.value=='Username' || this.value == '#{@username}'){this.value='';this.style.color = '#000';}",
         :onblur => "if(this.value==''){this.value='#{@username}';this.style.color = '#aaa';}"
         = f.text_field :email,
@@ -23,36 +23,35 @@
           :value => "Current Password",
           :class => "new-user",
           :autocomplete => "off",
-          :style => "color:#aaa;",
+          :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
           :onfocus => "if(this.value=='Current Password'){this.value='';this.style.color = '#000';this.type='password'}",
           :onblur => "if(this.value==''){this.value='Current Password';this.style.color = '#aaa';this.type='text'}"
         = f.text_field :password,
           :value => "New Password (4 characters minimum)",
           :autocomplete => "off",
           :class => "new-user",
-          :style => "color:#aaa;",
+          :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
           :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000';this.type='password'}",
           :onblur => "if(this.value==''){this.value='New Password (4 characters minimum)';this.style.color = '#aaa';this.type='text'}"
         = f.text_field :name,
           :value => "#{@name}",
           :class => "new-user",
           :autocomplete => "off",
-          :style => "color:#aaa;",
+          :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
           :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000';}",  
           :onblur => "if(this.value==''){this.value='#{@name}';this.style.color = '#aaa'}"
         = f.file_field :image,
           :value => "#{@image}",
           :id => "pictureInput",
           :class => "new-user",
-          :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-          :onfocus => "if(this.value=='#{@image}'){this.value='';this.style.color = '#000000';}",
+          :style => "margin-bottom: 10px;",
           :color => "white",
           :onblur => "if(this.value==''){this.value='#{@image}';this.style.color = '#000000';}"
         = f.text_field :picture,
           :value => "#{@picture}",
           :class => "password-margin new-user pic-url",
           :autocomplete => "off",
-          :style => "color:#aaa;",
+          :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
           :onfocus => "if(this.value=='#{@picture}'){this.value='';this.style.color = '#000';}",  
           :onblur => "if(this.value==''){this.value='#{@picture}';this.style.color = '#aaa'}"
         .centered.nav-button
