--- a/app/views/layouts/_nolognav.html.haml
+++ b/app/views/layouts/_nolognav.html.haml
@@ -1,3 +1,6 @@
 #nav
   .contents
     %img#logo
+      #login-container
+        .nav-button#logout-button
+          =link_to "Log out", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log"
