--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,45 +1,45 @@
 = stylesheet_link_tag "registrations.css"
 = render 'layouts/nolognav'
 .row
-  %h1.center Customize Profile
-  %div.form-box.col.m4.offset-m4.l4.offset-l4.s4.offset-s4
+  %h1.away-from-edge Edit Profile
+  %div.form-box.col.m4.l4.s4
     = devise_error_messages!
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }, validate: true) do |f|
       - if !@omni
         = f.text_field :username,
-        :value => "#{@username}",
-        :class => "new-user",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-        :onfocus => "if(this.value=='Username' || this.value == '#{@username}'){this.value='';this.style.color = '#000';}",
-        :onblur => "if(this.value==''){this.value='#{@username}';this.style.color = '#aaa';}"
+          :value => "#{@username}",
+          :class => "new-user",
+          :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+          :onfocus => "if(this.value=='Username' || this.value == '#{@username}'){this.value='';this.style.color = '#000';}",
+          :onblur => "if(this.value==''){this.value='#{@username}';}"
         = f.text_field :email,
-        :value => "Email",
-        :class => "new-user",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-        :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
-        :color => "white",
-        :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
+          :value => "#{@email}",
+          :class => "new-user",
+          :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+          :onfocus => "if(this.value=='#{@email}'){this.value='';this.style.color = '#000000';}",
+          :color => "white",
+          :onblur => "if(this.value==''){this.value='#{@email}';this.style.color = '#000000';}"
         = f.text_field :current_password,
           :value => "Current Password",
           :class => "new-user",
           :autocomplete => "off",
           :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-          :onfocus => "if(this.value=='Current Password'){this.value='';this.style.color = '#000';this.type='password'}",
-          :onblur => "if(this.value==''){this.value='Current Password';this.style.color = '#aaa';this.type='text'}"
+          :onfocus => "if(this.value=='Current Password'){this.value='';this.style.color = '#000000';this.type='password'}",
+          :onblur => "if(this.value==''){this.value='Current Password';this.type='text'}"
         = f.text_field :password,
           :value => "New Password (4 characters minimum)",
           :autocomplete => "off",
           :class => "new-user",
           :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-          :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000';this.type='password'}",
-          :onblur => "if(this.value==''){this.value='New Password (4 characters minimum)';this.style.color = '#aaa';this.type='text'}"
+          :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000000';this.type='password'}",
+          :onblur => "if(this.value==''){this.value='New Password (4 characters minimum)';this.style.color = '#000000';this.type='text'}"
         = f.text_field :name,
           :value => "#{@name}",
           :class => "new-user",
           :autocomplete => "off",
           :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-          :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000';}",  
-          :onblur => "if(this.value==''){this.value='#{@name}';this.style.color = '#aaa'}"
+          :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000000';}",  
+          :onblur => "if(this.value==''){this.value='#{@name}'}"
         = f.file_field :image,
           :value => "#{@image}",
           :id => "pictureInput",
@@ -52,8 +52,8 @@
           :class => "password-margin new-user pic-url",
           :autocomplete => "off",
           :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-          :onfocus => "if(this.value=='#{@picture}'){this.value='';this.style.color = '#000';}",  
-          :onblur => "if(this.value==''){this.value='#{@picture}';this.style.color = '#aaa'}"
+          :onfocus => "if(this.value=='#{@picture}'){this.value='';this.style.color = '#000000';}",  
+          :onblur => "if(this.value==''){this.value='#{@picture}';}"
         .centered.nav-button
           %span#signup-button= f.submit "Sign Up", class: "finish-signup transparent", style: "border: 0px !important;"
       -else
