--- a/app/views/users/edit_username.html.haml
+++ b/app/views/users/edit_username.html.haml
@@ -59,7 +59,7 @@
   $(function() {
     $('.pic-url').on('change', function(event) {
       $('#target').css("background-image", "url(" + $('.pic-url').val() + ")");
-    });
+    }).change();
   });
 
 
