--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,4 @@
-= render 'layouts/nolognav'
+= render 'layouts/navNotLoggedIn'
 = stylesheet_link_tag "registrations.css"
 .row
   %h1.away-from-edge Sign up
