--- a/app/views/users/edit_username.html.haml
+++ b/app/views/users/edit_username.html.haml
@@ -31,7 +31,7 @@
         :onfocus => "if(this.value=='Profile Picture URL'){this.value='';this.style.color = '#000000';}",
         :onblur => "if(this.value==''){this.value='Profile Picture URL';this.style.color = '#000000';}"
       .nav-button.upload-picture
-        Upload Profile Picture
+        Take Picture
         .invisible
           = f.file_field :image,
             :id => "pictureInput",
