--- a/app/views/layouts/_nolognav.html.haml
+++ b/app/views/layouts/_nolognav.html.haml
@@ -1,6 +1,6 @@
 #nav
   .contents
-    %img#logo
+    %img#logo.left-justify
       #login-container
         .nav-button#logout-button
-          =link_to "Log out", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log"
+          =link_to "Logout", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log"
