hidden player mobile

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,8 +8,8 @@
 			- else
 				=@user.bio
 			#player-container
-				#main-art.pick-song-image
-				#player-bottom
+				#main-art.pick-song-image.hidden-mobile
+				#player-bottom.hidden-mobile
 					#player-title
 					#player-artist
 					#player-button play
