--- a/app/views/users/edit_username.html.haml
+++ b/app/views/users/edit_username.html.haml
@@ -7,7 +7,7 @@
       - msg.each do |message|
         = content_tag :div, message, :id => "flash_#{name}"
   %div.form-box.col.m4.l4.s4
-    = form_for(@resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), validate: true) do |f|
       = devise_error_messages!
       = f.text_field :username, 
         :class => "new-user big-form",
