--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -5,6 +5,7 @@
   %div.form-box.col.m4.l4.s4
     = devise_error_messages!
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }, validate: true) do |f|
+      = f.error_messages
       - if !@omni
         = f.text_field :username,
           :value => "#{@username}",
