--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -19,7 +19,7 @@
       :color => "white",
       :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
       = f.text_field :password, autocomplete: "off", :class => 'new-account-form',
-      :value => "New Password (4 characters minimum)",
+      :value => "New Password",
       :id => "wat",
       :class => "password-margin new-user big-form",
       :autocomplete => "off",
