--- a/app/views/layouts/_simplenav.html.haml
+++ b/app/views/layouts/_simplenav.html.haml
@@ -23,4 +23,4 @@
           =link_to "Logout", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log"
         .nav-button#edit-profile-button
           =link_to "Edit Profile", edit_user_registration_path, :class => "home-link bigger image white-text stroke text-glow-hover log"
-    %img#logo
+    %img#logo.left-justify
