--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -160,8 +160,11 @@ img {
 
 }
 
-@media (max-width: 990px) {
+.hidden-mobile { 
+  display: none;
+}
+/*@media (max-width: 990px) {
   .hidden-mobile { 
     display: none;
   }
-}
+}*/
