--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,7 +4,7 @@
 		.container
 			%img.nav-profile-pic.borderr.z-depth-3#nav-profile-pic{alt: "profile_pic", src: @img, height: 200, width: "auto"}
 			- if @user == current_user
-				=best_in_place @user, :bio, as: :textarea, url: 'users/bio/'
+				=best_in_place @user, :bio, as: :textarea, url: 'users/bio/', id: 'biography'
 			- else
 				=@user.bio
 			#player-container
