--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}
     %link{:href => "https://fonts.googleapis.com/css?family=Rock+Salt|Bangers", :rel => "stylesheet", :type => "text/css"}
     %link{:href => "http://cheshirepus.com/mysongis.css", :rel => "stylesheet", :type => "text/css"}
+    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
   %body
     = yield
   %footer
