--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -60,8 +60,8 @@ img {
 
 .big-box {
   position: relative;
-  top: 18px !important;
-  left: 20px !important;
+  top: 18px; /*!important*/
+  left: 20px; /*!important*/
   transform: scale(2, 2);
   /*!important*/
 }
@@ -98,7 +98,7 @@ img {
 }
 
 .form-box {
-  width: 520px !important;
+  width: 520px; /*!important;*/
   margin-left: 60px;  
 }
 
@@ -120,7 +120,7 @@ img {
 }
 
 .smallnav {
-  padding: 0px 0px 0px 0px /!*important*/;
+  padding: 0px 0px 0px 0px; /*!important*/
 }
 
 .message {
@@ -138,15 +138,15 @@ img {
 }
 
 .left-justify {
-  left: 20px /*!important*/;
+  left: 20px; /*!important*/
 }
 
 .nocolor {
-  background-color: transparent /*!important*/;
+  background-color: transparent; /*!important*/
 }
 
 .pick-song-image {
-  background-image: url('/pick-song-image.png') /*!important*/;
+  background-image: url('/pick-song-image.png'); /*!important*/
 }
 
 .hidden-desktop {
@@ -165,8 +165,8 @@ img {
 
 @media all {
  .big-form {
-  font-size: 2rem /*!important*/;
-  width: 500px /*!important*/;
+  font-size: 2rem; /*!important*/
+  width: 500px; /*!important*/
  }
  .img-upload {
   height: 40px;
