--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -66,6 +66,12 @@ img {
   /*!important*/
 }
 
+.search-placeholder{
+  margin-top: 75px;
+  margin-bottom: 75px;
+  margin-left: 10px;
+}
+
 .ui-autocomplete {
   position: absolute;
   top: 100%;
